--- a/config.plist
+++ b/config.plist
@@ -265,11 +265,15 @@
 		<dict>
 			<key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
 			<dict>
+				<key>model</key>
+				<string>Realtek ALC1220</string>
 				<key>layout-id</key>
-				<data>IQ==</data>
+				<integer>21</integer>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
+				<key>model</key>
+				<string>Intel HD Graphics 630</string>
 				<key>layout-id</key>
 				<data>AAASWQ==</data>
 				<key>shikigva</key>
@@ -988,7 +992,7 @@
 			<key>TakeoffDelay</key>
 			<integer>0</integer>
 			<key>Timeout</key>
-			<integer>5</integer>
+			<integer>20</integer>
 		</dict>
 		<key>Debug</key>
 		<dict>
@@ -1155,7 +1159,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>keepsyms=1 swd_panic=1 debug=0x100 igfxonln=1 forceRenderStandby=0 alcid=21 revpatch=sbvmm</string>
+				<string>swd_panic=1 forceRenderStandby=0 revpatch=sbvmm</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
